# Animation-Projects

./: CMakeLists.txt  README.md  main.cpp  wasp_fly.anim
include/: Animation.h  Channel.h  Cloth.h  Cube.h  Ground.h  Joint.h  Keyframe.h  Particle.h  PhysWorld.h  Skeleton.h  Skin.h  SpringDamper.h  Triangle.h  Window.h
shaders/: shader.frag  shaderg.vert
src/: Animation.cpp  Channel.cpp  Cloth.cpp  Cube.cpp  Ground.cpp  Joint.cpp  Keyframe.cpp  Particle.cpp  PhysWorld.cpp  Shader.cpp  Skeleton.cpp  Skin.cpp  SpringDamper.cpp  Triangle.cpp  Window.cpp
